# gcloud-adk-customer-service-agent

./: .gitignore  QUICKSTART.md  README.md  deploy.sh  pyproject.toml  query_mcp_tools.py  serve.sh
agent/: __init__.py  agent.py  config.py  main.py  root_agent.py
agent/entities/: customer.py
agent/shared_libraries/: callbacks.py
agents/root_agent/: prompts.py
agents/shared_libraries/: callbacks.py
app/agent/: agent.py  config.py
app/agent/shared_libraries/: __init__.py  callbacks.py
app/agent/tools/: tools.py
deploy/: delete.py  deploy.py  fast-api.py
eval/: README.md  test_eval.py
eval/eval_data/: cart_management.test.json  full_conversation.test.json  simple.test.json
mcp_server/: README.md  example_usage.py  fast_mcp_client.py  fast_mcp_server.py  server.py
