[project]
name = "customer-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.14.1",
    "google-cloud-aiplatform>=1.114.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = []
